kubernetes/apps/networking-system/envoy-gateway/gateway/internal/gateway.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname gateway-int.noirprime.com
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 172.19.82.201
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.noirprime.com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.cnoirprime.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: noirprime-com-tls
